--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "build": "tsc",
     "start": "yarn build && node dist/src/index.js",
-    "start:dev": "ts-node-dev src/index.ts",
+    "start:local": "ts-node-dev src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:functional": "jest --projects ./test --runInBand",
     "lint": "eslint ./src ./test --ext .ts",
-    "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint:fix": "eslint ./src ./test --ext .ts --fix"
   },
   "repository": {
     "type": "git",
@@ -27,11 +28,16 @@
   },
   "homepage": "https://github.com/gustavoroc/node-typescript-api#readme",
   "devDependencies": {
+    "@types/jest": "^29.2.3",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.9",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.28.0",
+    "jest": "^29.3.1",
+    "supertest": "^6.3.1",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
