--- a/package.json
+++ b/package.json
@@ -28,20 +28,24 @@
   },
   "homepage": "https://github.com/gustavoroc/node-typescript-api#readme",
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
-    "jest": "^29.3.1",
-    "ts-jest": "^29.0.3",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.28.0",
+    "jest": "^29.3.1",
     "supertest": "^6.3.1",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.7.6",
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
     "module-alias": "^2.2.2"
   }
 }
