--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:functional": "jest --projects ./test --runInBand",
     "lint": "eslint ./src ./test --ext .ts",
+    "style:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
+    "style:fix": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint:fix": "eslint ./src ./test --ext .ts --fix"
   },
   "repository": {
@@ -37,6 +39,7 @@
     "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.28.0",
     "jest": "^29.3.1",
+    "prettier": "^2.8.0",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
