--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "yarn build && node dist/src/index.js",
     "start:local": "ts-node-dev src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:unit": "jest",
     "test:functional": "jest --projects ./test --runInBand",
     "lint": "eslint ./src ./test --ext .ts",
     "style:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/gustavoroc/node-typescript-api#readme",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
     "@types/module-alias": "^2.0.1",
@@ -47,6 +48,7 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
+    "axios": "^1.2.0",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "module-alias": "^2.2.2"
