--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/gustavoroc/node-typescript-api#readme",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/config": "^3.3.0",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
     "@types/module-alias": "^2.0.1",
@@ -50,6 +51,7 @@
     "@overnightjs/core": "^1.7.6",
     "axios": "^1.2.0",
     "body-parser": "^1.20.1",
+    "config": "^3.3.8",
     "express": "^4.18.2",
     "module-alias": "^2.2.2"
   }
