--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
     "@types/module-alias": "^2.0.1",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
@@ -53,6 +54,7 @@
     "body-parser": "^1.20.1",
     "config": "^3.3.8",
     "express": "^4.18.2",
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "mongoose": "^6.7.5"
   }
 }
