--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.28.0",
     "jest": "^29.3.1",
+    "nock": "^13.2.9",
     "prettier": "^2.8.0",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
