feat: server start working

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "start": "yarn build && node dist/src/index.js",
     "start:local": "ts-node-dev src/index.ts",
+    "test": "yarn test:unit && yarn test:functional",
     "test:unit": "jest",
     "test:functional": "jest --projects ./test --runInBand",
     "lint": "eslint ./src ./test --ext .ts",
@@ -35,7 +36,6 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
     "@types/module-alias": "^2.0.1",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
-    "axios": "^1.2.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.20.1",
     "config": "^3.3.8",
     "express": "^4.18.2",
